Fix android permissions and camera problem

The qandroidcamerasession had a race condition when received different
applicationStateChange. This way it is garanteed that the parsed state
is the active one.

Fixes: QTBUG-97610
Change-Id: I639860ff8904bf698218e2b8a1727af5ce6feb81
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit d805e2c245e1722e350fcfebabec42fbddd0b22b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>